dimagi-SalesforceFB/src/objects/Child_Account__c.object
<CustomObject>
    <description>Used to enable hierarchy reporting on accounts.  Every time a parent-child relationship is made for accounts a trigger will create one of these links.</description>
    <fields>
        <fullName>Child_Account__c</fullName>
        <label>Child Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Parent Accounts</relationshipLabel>
        <relationshipName>Child_Accounts1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Child_Country__c</fullName>
        <formula>Child_Account__r.Country__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Child Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Child Accounts</relationshipLabel>
        <relationshipName>Child_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Child Account</label>
    <nameField>
        <label>Child Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Child Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>